k8s-istio-cluster/production-example/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: payment-mtls
  namespace: prod
spec:
  mtls:
    mode: STRICT
