k8s-istio-cluster/production-example/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-v1
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment
      version: v1
  template:
    metadata:
      labels:
        app: payment
        version: v1
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
          - "-text=Payment v1"
        ports:
        - containerPort: 5678

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-v2
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
      version: v2
  template:
    metadata:
      labels:
        app: payment
        version: v2
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
          - "-text=Payment v2"
        ports:
        - containerPort: 5678
