k8s-istio-cluster/production-example/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: prod
spec:
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 5678
